--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>async y await</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <table id="table">
+        <tr>
+            <th>Task</th>
+            <th>Priority</th>
+            <th>Done?</th>
+        </tr>
+    </table>
     <script src="app.js"></script>
 </body>
 </html>
